--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Название компании - самая клевая компания! Небось ещё и фиолетовая.</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/Style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body class="no-js">
